Do performance improvements

--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -171,17 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "4677f1fa",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2462291717529297\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fee513e7790>"
+       "<matplotlib.image.AxesImage at 0x7fc59d43cb80>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -203,8 +210,9 @@
     "from src.data.loaders import MitoSemsegDataset\n",
     "from torchvision.transforms.v2 import CenterCrop, ConvertDtype\n",
     "from torchvision.transforms.v2.functional import pad\n",
+    "import time\n",
     "\n",
-    "dataset = MitoSemsegDataset(TRAIN_ROOT, transforms=ConvertDtype(torch.float32), debug=True)\n",
+    "dataset = MitoSemsegDataset(TRAIN_ROOT, transforms=ConvertDtype(torch.float32), indices=[81])\n",
     "src, mask = dataset[0]\n",
     "if src.ndim == 3:\n",
     "    src = src.unsqueeze(0)\n",
@@ -219,14 +227,44 @@
     "extra_h = (1 + h//output_size)*output_size - h\n",
     "p = (input_size-output_size)//2\n",
     "\n",
+    "use_fold = False\n",
+    "\n",
+    "start = time.time()\n",
     "src = pad(src, [p+extra_w, p, p, p+extra_h], padding_mode='reflect') # left, top, right,  bottom\n",
-    "# make a minibatch of patches\n",
-    "patches = unfold(src, kernel_size=k, stride=s).permute(2,0,1).reshape(-1,1,k,k) \n",
-    "# do prediction on minibatch\n",
-    "patches = model(patches).reshape(-1,1,s*s).permute(1,2,0)\n",
-    "# fold patches back to full image\n",
-    "dst = fold(patches, output_size=(h+extra_h,w+extra_w), kernel_size=s, stride=s)\n",
+    "if use_fold:\n",
+    "    # make a minibatch of patches\n",
+    "    patches = unfold(src, kernel_size=k, stride=s).permute(2,0,1).reshape(-1,1,k,k) \n",
+    "    # do prediction on minibatch\n",
+    "    patches = model(patches).reshape(-1,1,s*s).permute(1,2,0)\n",
+    "    # fold patches back to full image\n",
+    "    dst = fold(patches, output_size=(h+extra_h,w+extra_w), kernel_size=s, stride=s)\n",
+    "else:\n",
+    "    L_w = 1 + ((src.shape[3] - k) // s)  # Number of horizontal overlap patches\n",
+    "    L_h = 1 + ((src.shape[2] - k) // s)  # Number of vertical overlap patches\n",
+    "    L = L_h * L_w  # Total number of patches\n",
+    "\n",
+    "    # Arrange patches as minibatch (L,1,H,W)\n",
+    "    patches = torch.empty((L, 1, k, k), dtype=torch.float32)\n",
+    "    for i in range(L_h):\n",
+    "        for j in range(L_w):\n",
+    "            patches[i * L_w + j, 0, :, :] = src[\n",
+    "                0, 0, i * s : i * s + k, j * s : j * s + k\n",
+    "            ]\n",
+    "\n",
+    "    # Do prediction\n",
+    "    patches = model(patches)\n",
+    "\n",
+    "    # Gather patches back to a single image\n",
+    "    dst = torch.empty((1, 1, h + extra_h, w + extra_w), dtype=torch.float32)\n",
+    "    for i in range(L_h):\n",
+    "        for j in range(L_w):\n",
+    "            dst[0, 0, i * s : (1 + i) * s, j * s : (1 + j) * s] = patches[\n",
+    "                i * L_w + j, 0, :, :\n",
+    "            ]\n",
+    "\n",
     "dst = dst[:,:,:-extra_h,extra_w:]\n",
+    "\n",
+    "print(time.time()-start)\n",
     "\n",
     "plt.imshow(dst.squeeze())\n"
    ]
