--- a/notebooks/3-cristae-segmentation.ipynb
+++ b/notebooks/3-cristae-segmentation.ipynb
@@ -39,7 +39,7 @@
     "from src.analysis.components import crop_all_mitos\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "dataset = MitoSemsegDataset(root=TRAIN_ROOT, debug=True)\n",
+    "dataset = MitoSemsegDataset(root=TRAIN_ROOT, indices=[81])\n",
     "img, mask = dataset[0]"
    ]
   },
