--- a/notebooks/4-pipeline-sandbox.ipynb
+++ b/notebooks/4-pipeline-sandbox.ipynb
@@ -316,7 +316,7 @@
     "from src.analysis.components import get_mito_stats\n",
     "from src.visualization.analysis import show_mito_stats\n",
     "\n",
-    "dataset = MitoSemsegDataset(root=TRAIN_ROOT, debug=True)\n",
+    "dataset = MitoSemsegDataset(root=TRAIN_ROOT, indices=[81])\n",
     "img, mask = dataset[0]\n",
     " \n",
     "stats = get_mito_stats(img,mask)\n",
