--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "4677f1fa",
    "metadata": {},
    "outputs": [
@@ -179,16 +179,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2462291717529297\n"
+      "0.19393348693847656\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fc59d43cb80>"
+       "<matplotlib.image.AxesImage at 0x7fa4ccad6bc0>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -243,22 +243,27 @@
     "    L_h = 1 + ((src.shape[2] - k) // s)  # Number of vertical overlap patches\n",
     "    L = L_h * L_w  # Total number of patches\n",
     "\n",
-    "    # Arrange patches as minibatch (L,1,H,W)\n",
-    "    patches = torch.empty((L, 1, k, k), dtype=torch.float32)\n",
+    "    # Arrange patches as minibatch\n",
+    "    patches_in = torch.empty((L, 1, k, k), dtype=torch.float32, device=src.device)\n",
     "    for i in range(L_h):\n",
     "        for j in range(L_w):\n",
-    "            patches[i * L_w + j, 0, :, :] = src[\n",
+    "            patches_in[i * L_w + j, 0, :, :] = src[\n",
     "                0, 0, i * s : i * s + k, j * s : j * s + k\n",
     "            ]\n",
     "\n",
-    "    # Do prediction\n",
-    "    patches = model(patches)\n",
+    "    # Do prediction one row of overlap patches at a time\n",
+    "    patches_out = torch.empty((L, 1, s, s), dtype=torch.float32, device=src.device)\n",
+    "    for i in range(L_h):\n",
+    "        batch = patches_in[i * L_w : (i + 1) * L_w, 0, :, :]\n",
+    "        patches_out[i * L_w : (i + 1) * L_w, 0, :, :] = model(batch)\n",
     "\n",
     "    # Gather patches back to a single image\n",
-    "    dst = torch.empty((1, 1, h + extra_h, w + extra_w), dtype=torch.float32)\n",
+    "    dst = torch.empty(\n",
+    "        (1, 1, h + extra_h, w + extra_w), dtype=torch.float32, device=src.device\n",
+    "    )\n",
     "    for i in range(L_h):\n",
     "        for j in range(L_w):\n",
-    "            dst[0, 0, i * s : (1 + i) * s, j * s : (1 + j) * s] = patches[\n",
+    "            dst[0, 0, i * s : (1 + i) * s, j * s : (1 + j) * s] = patches_out[\n",
     "                i * L_w + j, 0, :, :\n",
     "            ]\n",
     "\n",
