Added class imbalance weights

--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "4677f1fa",
    "metadata": {},
    "outputs": [
@@ -179,16 +179,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19393348693847656\n"
+      "0.20447087287902832\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa4ccad6bc0>"
+       "<matplotlib.image.AxesImage at 0x7fa4c8c08670>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -254,8 +254,8 @@
     "    # Do prediction one row of overlap patches at a time\n",
     "    patches_out = torch.empty((L, 1, s, s), dtype=torch.float32, device=src.device)\n",
     "    for i in range(L_h):\n",
-    "        batch = patches_in[i * L_w : (i + 1) * L_w, 0, :, :]\n",
-    "        patches_out[i * L_w : (i + 1) * L_w, 0, :, :] = model(batch)\n",
+    "        batch = patches_in[i * L_w : (i + 1) * L_w, :, :, :]\n",
+    "        patches_out[i * L_w : (i + 1) * L_w, :, :, :] = model(batch)\n",
     "\n",
     "    # Gather patches back to a single image\n",
     "    dst = torch.empty(\n",
