--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "3195f43f",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "(1000, 632)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "4677f1fa",
    "metadata": {},
    "outputs": [
@@ -179,16 +179,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.20447087287902832\n"
+      "0.19298934936523438\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fa4c8c08670>"
+       "<matplotlib.image.AxesImage at 0x7f53bc34e620>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -251,11 +251,11 @@
     "                0, 0, i * s : i * s + k, j * s : j * s + k\n",
     "            ]\n",
     "\n",
-    "    # Do prediction one row of overlap patches at a time\n",
+    "    # Do prediction 8 overlap patches at a time\n",
     "    patches_out = torch.empty((L, 1, s, s), dtype=torch.float32, device=src.device)\n",
-    "    for i in range(L_h):\n",
-    "        batch = patches_in[i * L_w : (i + 1) * L_w, :, :, :]\n",
-    "        patches_out[i * L_w : (i + 1) * L_w, :, :, :] = model(batch)\n",
+    "    for i in range(0,L,8):\n",
+    "        batch = patches_in[i : min(i + 8, L), :, :, :]\n",
+    "        patches_out[i : min(i + 8, L), :, :, :] = model(batch)\n",
     "\n",
     "    # Gather patches back to a single image\n",
     "    dst = torch.empty(\n",
