Implement foreground crop. Add AMP to training loop. Change unet to nnunet. Implement 1d median filtering of contours.

--- a/notebooks/1-unet-debug.ipynb
+++ b/notebooks/1-unet-debug.ipynb
@@ -16,77 +16,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5a984f0b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kristian/mambaforge/envs/mitotem/lib/python3.10/site-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
-      "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 2, 632, 632])\n",
+      "torch.Size([1, 2, 388, 388])\n",
       "[ModuleList(\n",
       "  (0): EncoderBlock(\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(1, 56, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(56, 56, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(1, 56, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(56, 56, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "  (1): EncoderBlock(\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(56, 112, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(112, 112, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(56, 112, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(112, 112, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "  (2): EncoderBlock(\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(112, 224, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(224, 224, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(112, 224, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(224, 224, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "  (3): EncoderBlock(\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(224, 448, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(448, 448, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(224, 448, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(448, 448, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "    (poolblock): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
       "  )\n",
       "), Sequential(\n",
-      "  (0): Conv2d(448, 896, kernel_size=(5, 5), stride=(1, 1))\n",
-      "  (1): ReLU()\n",
-      "  (2): Conv2d(896, 896, kernel_size=(5, 5), stride=(1, 1))\n",
-      "  (3): ReLU()\n",
-      "  (4): Dropout2d(p=0.5, inplace=False)\n",
+      "  (0): DoubleConv(\n",
+      "    (net): Sequential(\n",
+      "      (0): Conv2d(448, 896, kernel_size=(3, 3), stride=(1, 1))\n",
+      "      (1): ReLU()\n",
+      "      (2): Conv2d(896, 896, kernel_size=(3, 3), stride=(1, 1))\n",
+      "      (3): ReLU()\n",
+      "    )\n",
+      "  )\n",
+      "  (1): Dropout2d(p=0.5, inplace=False)\n",
       "), ModuleList(\n",
       "  (0): DecoderBlock(\n",
       "    (unpoolblock): Sequential(\n",
       "      (0): ConvTranspose2d(896, 448, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(896, 448, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(448, 448, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(896, 448, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(448, 448, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "  )\n",
       "  (1): DecoderBlock(\n",
@@ -94,11 +100,13 @@
       "      (0): ConvTranspose2d(448, 224, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(448, 224, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(224, 224, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(448, 224, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(224, 224, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "  )\n",
       "  (2): DecoderBlock(\n",
@@ -106,11 +114,13 @@
       "      (0): ConvTranspose2d(224, 112, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(224, 112, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(112, 112, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(224, 112, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(112, 112, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "  )\n",
       "  (3): DecoderBlock(\n",
@@ -118,11 +128,13 @@
       "      (0): ConvTranspose2d(112, 56, kernel_size=(2, 2), stride=(2, 2))\n",
       "      (1): ReLU()\n",
       "    )\n",
-      "    (convblock): Sequential(\n",
-      "      (0): Conv2d(112, 56, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (1): ReLU()\n",
-      "      (2): Conv2d(56, 56, kernel_size=(5, 5), stride=(1, 1))\n",
-      "      (3): ReLU()\n",
+      "    (convblock): DoubleConv(\n",
+      "      (net): Sequential(\n",
+      "        (0): Conv2d(112, 56, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (1): ReLU()\n",
+      "        (2): Conv2d(56, 56, kernel_size=(3, 3), stride=(1, 1))\n",
+      "        (3): ReLU()\n",
+      "      )\n",
       "    )\n",
       "  )\n",
       "), Conv2d(56, 2, kernel_size=(1, 1), stride=(1, 1))]\n"
@@ -133,32 +145,32 @@
     "import torch\n",
     "from src.models.unet import UNet\n",
     "\n",
-    "unet = UNet(56,5)\n",
-    "I = torch.randn((1,1,1000,1000))\n",
+    "unet = UNet(56,3)\n",
+    "I = torch.randn((1,1,572,572))\n",
     "print(unet(I).shape)\n",
     "print(list(unet.children()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3195f43f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 632)"
+       "(572, 388)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from src.models.unet import find_next_valid_size\n",
-    "find_next_valid_size(1000,5,4)"
+    "find_next_valid_size(557,3,4)"
    ]
   },
   {
@@ -171,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "id": "4677f1fa",
    "metadata": {},
    "outputs": [
@@ -179,16 +191,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.19298934936523438\n"
+      "0.1987009048461914\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f53bc34e620>"
+       "<matplotlib.image.AxesImage at 0x7f53b51063e0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -204,12 +216,13 @@
     }
    ],
    "source": [
+    "from math import ceil\n",
     "import torch\n",
     "from torch.nn.functional import unfold, fold\n",
     "import matplotlib.pyplot as plt\n",
     "from src.data.loaders import MitoSemsegDataset\n",
     "from torchvision.transforms.v2 import CenterCrop, ConvertDtype\n",
-    "from torchvision.transforms.v2.functional import pad\n",
+    "from torchvision.transforms.v2.functional import pad, resize\n",
     "import time\n",
     "\n",
     "dataset = MitoSemsegDataset(TRAIN_ROOT, transforms=ConvertDtype(torch.float32), indices=[81])\n",
@@ -217,14 +230,16 @@
     "if src.ndim == 3:\n",
     "    src = src.unsqueeze(0)\n",
     "\n",
-    "input_size = 1000\n",
-    "output_size = 632\n",
+    "input_size = 1084\n",
+    "output_size = 900\n",
     "model = CenterCrop(output_size)\n",
+    "\n",
+    "#src = resize(src, (1336,2004))\n",
     "\n",
     "k, s = input_size, output_size\n",
     "h, w = src.shape[-2:]\n",
-    "extra_w = (1 + w//output_size)*output_size - w\n",
-    "extra_h = (1 + h//output_size)*output_size - h\n",
+    "extra_w = ceil(w/output_size)*output_size - w\n",
+    "extra_h = ceil(h/output_size)*output_size - h\n",
     "p = (input_size-output_size)//2\n",
     "\n",
     "use_fold = False\n",
@@ -242,9 +257,10 @@
     "    L_w = 1 + ((src.shape[3] - k) // s)  # Number of horizontal overlap patches\n",
     "    L_h = 1 + ((src.shape[2] - k) // s)  # Number of vertical overlap patches\n",
     "    L = L_h * L_w  # Total number of patches\n",
+    "    L8 = ceil(L/8)*8\n",
     "\n",
     "    # Arrange patches as minibatch\n",
-    "    patches_in = torch.empty((L, 1, k, k), dtype=torch.float32, device=src.device)\n",
+    "    patches_in = torch.empty((L8, 1, k, k), dtype=torch.float32, device=src.device)\n",
     "    for i in range(L_h):\n",
     "        for j in range(L_w):\n",
     "            patches_in[i * L_w + j, 0, :, :] = src[\n",
@@ -252,10 +268,10 @@
     "            ]\n",
     "\n",
     "    # Do prediction 8 overlap patches at a time\n",
-    "    patches_out = torch.empty((L, 1, s, s), dtype=torch.float32, device=src.device)\n",
+    "    patches_out = torch.empty((L8, 1, s, s), dtype=torch.float32, device=src.device)\n",
     "    for i in range(0,L,8):\n",
-    "        batch = patches_in[i : min(i + 8, L), :, :, :]\n",
-    "        patches_out[i : min(i + 8, L), :, :, :] = model(batch)\n",
+    "        batch = patches_in[i : i + 8, :, :, :]\n",
+    "        patches_out[i : i + 8, :, :, :] = model(batch)\n",
     "\n",
     "    # Gather patches back to a single image\n",
     "    dst = torch.empty(\n",
